syntax = "proto3";
package protobuf;
import "system.proto";
message edgeInfo{
  string serialNumber = 1;
  protobuf.SystemInfo data = 2;
}